Changed the type of list that method getAll returns